--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="save">Save</string>
     <string name="invalid_name">Invalid name</string>
     <string name="invalid_count">Invalid count</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
