--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,9 @@
 <resources>
-    <string name="app_name">ShoppingList</string>
-    <string name="add_new_shop_item">Add new shop item</string>
-    <string name="name">Name:</string>
-    <string name="count">Count:</string>
-    <string name="save">Save</string>
-    <string name="invalid_name">Invalid name</string>
-    <string name="invalid_count">Invalid count</string>
-
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">Shopping List</string>
+    <string name="add_shop_item_content_description">Add new shop item</string>
+    <string name="name_hint">Name:</string>
+    <string name="count_hint">Count:</string>
+    <string name="save_btn">Save</string>
+    <string name="error_input_name">Invalid name</string>
+    <string name="error_input_count">Invalid count</string>
 </resources>
